feature: add last 40 questions

--- a/src/ui.html
+++ b/src/ui.html
@@ -428,6 +428,246 @@
           link: "https://www.youtube.com/watch?v=a3u9y9IOG68&t=250s",
           title: "Day 20",
         },
+        {
+          day: 21,
+          type: "Interaction Design",
+          link: "https://www.youtube.com/watch?v=SnEjLNwyYAI&t=28s",
+          title: "Day 21",
+        },
+        {
+          day: 22,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=LlbfdLxPpyk",
+          title: "Day 22",
+        },
+        {
+          day: 23,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=8MQmYa_zq0g",
+          title: "Day 23",
+        },
+        {
+          day: 24,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=oujsls1BXjs&t=119s",
+          title: "Day 24",
+        },
+        {
+          day: 25,
+          type: "User Research",
+          link: "https://www.youtube.com/watch?v=dFlACTzeq0w",
+          title: "Day 25",
+        },
+        {
+          day: 26,
+          type: "Wireframe",
+          link: "https://www.youtube.com/watch?v=c9Wg6Cb_YlU&t=63s",
+          title: "Day 26",
+        },
+        {
+          day: 27,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=0qPMd7SuGfQ&t=1s",
+          title: "Day 27",
+        },
+        {
+          day: 28,
+          type: "User Research",
+          link: "https://www.youtube.com/watch?v=PZ2hchA4Jvg",
+          title: "Day 28",
+        },
+        {
+          day: 29,
+          type: "Wireframe",
+          link: "https://www.youtube.com/watch?v=2hQA1ZsGAH8",
+          title: "Day 29",
+        },
+        {
+          day: 30,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=0qPMd7SuGfQ&t=1s",
+          title: "Day 30",
+        },
+        {
+          day: 31,
+          type: "Visual Design",
+          link: "https://www.youtube.com/watch?v=EK-pHkc5EL4&t=14s",
+          title: "Day 31",
+        },
+        {
+          day: 32,
+          type: "Visual Design",
+          link: "https://www.youtube.com/watch?v=II-6dDzc-80&t=6s",
+          title: "Day 32",
+        },
+        {
+          day: 33,
+          type: "Interaction Design",
+          link: "https://www.youtube.com/watch?v=9cVSZpJimk8",
+          title: "Day 33",
+        },
+        {
+          day: 34,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=_hfUHgITXFs",
+          title: "Day 34",
+        },
+        {
+          day: 35,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=j1kfemHFHS0",
+          title: "Day 35",
+        },
+        {
+          day: 36,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=oujsls1BXjs&t=119s",
+          title: "Day 36",
+        },
+        {
+          day: 37,
+          type: "User Research",
+          link: "https://www.youtube.com/watch?v=oeSsyb-tzfo",
+          title: "Day 37",
+        },
+        {
+          day: 38,
+          type: "Wireframe",
+          link: "https://www.youtube.com/watch?v=qpH7-KFWZRI&t=210s",
+          title: "Day 38",
+        },
+        {
+          day: 39,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=JeeB8jEd_KQ",
+          title: "Day 39",
+        },
+        {
+          day: 40,
+          type: "User Research",
+          link: "https://www.youtube.com/watch?v=W8vBqSsH2Jo",
+          title: "Day 40",
+        },
+        {
+          day: 41,
+          type: "Wireframe",
+          link: "https://www.youtube.com/watch?v=6t_dYhXyYjI&t=25s",
+          title: "Day 41",
+        },
+        {
+          day: 42,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=nYCJTea1AUQ",
+          title: "Day 42",
+        },
+        {
+          day: 43,
+          type: "Visual Design",
+          link: "https://www.youtube.com/watch?v=RYDiDpW2VkM",
+          title: "Day 43",
+        },
+        {
+          day: 44,
+          type: "Visual Design",
+          link: "https://www.youtube.com/watch?v=UyDV7F34QJE",
+          title: "Day 44",
+        },
+        {
+          day: 45,
+          type: "Interaction Design",
+          link: "https://www.youtube.com/watch?v=2r3WvIxHXLo",
+          title: "Day 45",
+        },
+        {
+          day: 46,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=IMQwPjn6ckU",
+          title: "Day 46",
+        },
+        {
+          day: 47,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=roeVp9mxl64",
+          title: "Day 47",
+        },
+        {
+          day: 48,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=oujsls1BXjs&t=119s",
+          title: "Day 48",
+        },
+        {
+          day: 49,
+          type: "User Research",
+          link: "https://www.youtube.com/watch?v=kQ_6faxhyIw",
+          title: "Day 49",
+        },
+        {
+          day: 50,
+          type: "Wireframe",
+          link: "https://www.youtube.com/watch?v=qpH7-KFWZRI&t=210s",
+          title: "Day 50",
+        },
+        {
+          day: 51,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=DVOrltZqPE4",
+          title: "Day 51",
+        },
+        {
+          day: 52,
+          type: "User Research",
+          link: "https://www.youtube.com/watch?v=fqNAWyOOVfw",
+          title: "Day 52",
+        },
+        {
+          day: 53,
+          type: "Wireframe",
+          link: "https://www.youtube.com/watch?v=6t_dYhXyYjI",
+          title: "Day 53",
+        },
+        {
+          day: 54,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=VTW1yYUqBm8",
+          title: "Day 54",
+        },
+        {
+          day: 55,
+          type: "Visual Design",
+          link: "https://www.youtube.com/watch?v=RYDiDpW2VkM",
+          title: "Day 55",
+        },
+        {
+          day: 56,
+          type: "Visual Design",
+          link: "https://www.youtube.com/watch?v=48YwaTiYau0&t=236s",
+          title: "Day 56",
+        },
+        {
+          day: 57,
+          type: "Interaction Design",
+          link: "https://www.youtube.com/watch?v=wuhgLGLrMoM",
+          title: "Day 57",
+        },
+        {
+          day: 58,
+          type: "Usability Testing",
+          link: "https://www.youtube.com/watch?v=7V-XlWYkM_c",
+          title: "Day 58",
+        },
+        {
+          day: 59,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=oujsls1BXjs&t=119s",
+          title: "Day 59",
+        },
+        {
+          day: 60,
+          type: "Whiteboard Challenge",
+          link: "https://www.youtube.com/watch?v=roeVp9mxl64",
+          title: "Day 60",
+        },
       ];
 
       var completedDays = [];
